# cosmos

./: .dockerignore  Dockerfile  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
notebooks/: Info.ipynb
scripts/: generate-lockfile.sh  init.Dockerfile
src/cosmos/: __init__.py
