[project]
name = "cosmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "kureta", email = "skureta@gmail.com" }]
requires-python = ">=3.12,<3.13"
dependencies = ["torch~=2.5.1", "torchaudio~=2.5.1", "torchvision~=0.20.1"]

[project.scripts]
cosmos = "cosmos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["jupyterlab~=4.3.1", "matplotlib~=3.9.2"]
